Initial draft of grouphon related changes

--- a/css/palettes/_darker.scss
+++ b/css/palettes/_darker.scss
@@ -544,7 +544,7 @@ body #page .mce-btn-group:not(:first-child) {
 }
 
 #header #c_logo {
-   background: url(../pics/logos/logo-GLPI-100-grey.png) 0 0 repeat-x;
+   background-image: url(../pics/logos/pinterest_profile_image.png);
 }
 
 #c_preference a, #language_link > span {
