Changed few styles

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3282,7 +3282,7 @@ ul#menu {
    min-height: 34px;
    padding: 3px 0;
    box-sizing: border-box;
-   background-color: #FFF;
+   background-color: lightgray;
 
    ul {
       left: 0px;
